--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -5,15 +5,13 @@
   }
   
   #nav ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+ gap:20px
   }
-  
+
   #nav ul li {
-    margin-right: 20px;
-  }
+  justify-content: center;
+  display: flex;
+}
   
   #nav ul li a {
     text-decoration: none;
@@ -31,6 +29,8 @@
     transform: scale(1.4);
     filter: brightness(1);
   }
+
+
 
  
 
